# infrared-node-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  ifrs.service  install.sh
src/: action.rs  config.rs  default_config.toml  main.rs  scanner.rs
