[profile.release]
strip = true

[package]
name = "infrared-node-rs"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
env_logger = "0.9.1"
infrared-rs = "0.2.0"
log = "0.4.17"
serde = "1.0.147"
smarthome-sdk-rs = "0.8.0"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
toml = "0.5.9"
